# Arachnopod

./: .gitignore  CMakelists.txt
software/board/: CMakeLists.txt
software/board/board/: CMakeLists.txt
software/common/: CMakeLists.txt
software/common/include/: arp_config.hpp  common.hpp
software/common/src/: common.cpp
software/data_base/: BD.xlsx
software/docs/: DATA_EXCHANGE_RU.md  README_RU.md
software/scripts/: bd_parser.py
software/sim/: CMakeLists.txt  control_in.txt
software/sim/log/: control_in.txt
software/sim/sim/: CMakeLists.txt  sim_operator.cpp
software/sim/sim/simulation/: CMakeLists.txt
software/sim/sim/simulation/base/include/: sim_base.hpp  sim_cs_base.hpp  sim_ls_base.hpp  sim_mns_base.hpp  sim_pss_base.hpp  sim_tcs_base.hpp  sim_tms_base.hpp
software/sim/sim/simulation/cs/src/: cs_sim.cpp
software/sim/sim/simulation/pss/include/: pss_sim.hpp
software/sim/sim/simulation/pss/interface/: i_pss_sim.hpp
software/sim/sim/simulation/pss/src/: pss_sim.cpp
software/sim/sim/systems/: CMakeLists.txt
software/sim/sim/systems/base/: alg_list.hpp  alg_tab.hpp  command_tab.hpp  local_param_list.hpp  param_comm_list.hpp  param_tab.hpp  real_type_list.hpp  sys_id_range.hpp  sys_list.hpp
software/sim/sim/systems/bus_mock/include/: mock_bus.hpp
software/sim/sim/systems/bus_mock/interface/: i_mock_bus.hpp
software/sim/sim/systems/bus_mock/src/: mock_bus.cpp
software/sim/sim/systems/control/interface/: i_control_console.hpp
software/sim/sim/systems/control/src/: control_console.cpp  control_internal.hpp  control_support.cpp
software/sim/sim/systems/cs/base/: command_list.hpp  param_comm_list.hpp  param_list.hpp  param_tab.hpp  type_list.hpp
software/sim/sim/systems/cs/include/: cs.hpp  cs_bus_control.hpp  cs_control_bridge.hpp  cs_exchange.hpp  cs_nodes.hpp  cs_operating_mode.hpp  cs_scheduler.hpp  cs_systems.hpp
software/sim/sim/systems/cs/interface/: i_cs.hpp  i_par.hpp
software/sim/sim/systems/cs/src/: cs.cpp  cs_bus_control.cpp  cs_control_bridge.cpp  cs_control_internal.hpp  cs_control_support.cpp  cs_exchange.cpp  cs_internal.hpp  cs_nodes.cpp  cs_operating_mode.cpp  cs_operating_mode_internal.hpp  cs_operating_mode_support.cpp  cs_runtime.cpp  cs_scheduler.cpp  cs_scheduler_internal.hpp  cs_scheduler_support.cpp  cs_support.cpp  cs_systems.cpp  cs_systems_internal.hpp  cs_systems_support.cpp
software/sim/sim/systems/cs/src/datapars/: i_par.cpp
software/sim/sim/systems/cs/src/nodes/: cs_ls.cpp  cs_mns.cpp  cs_pss.cpp  cs_tcs.cpp  cs_tms.cpp
software/sim/sim/systems/pss/include/: pss.hpp
software/sim/sim/systems/pss/interface/: i_pss.hpp
software/sim/sim/systems/pss/src/: pss.cpp  pss_internal.hpp  pss_support.cpp
software/sim/sim/systems/sub/interface/: i_cmd.hpp  i_cmd_exec.hpp  i_isim_registry.hpp  i_msg_block.hpp  i_msg_header.hpp  i_par.hpp  i_sim.hpp  i_sys.hpp  i_sys_algo.hpp
software/sim/sim/systems/sub/internal/: system_software_tools.hpp
software/sim/sim/systems/sub/src/: i_cmd.cpp  i_cmd_exec.cpp  i_isim_registry.cpp  i_msg_block.cpp  i_msg_header.cpp  i_par.cpp  i_sim.cpp  i_sys.cpp  i_sys_algo.cpp
software/sim/src/: CMakeLists.txt
software/sim/src/core/: CMakeLists.txt
software/sim/src/core/include/: command.hpp  imodule.hpp  logger.hpp  module_manager.hpp  protocol.hpp  render_v.hpp  timing.hpp
software/sim/src/core/src/: imodule.cpp  logger.cpp  module_manager.cpp  render_v.cpp
software/sim/src/cvs/: CMakeLists.txt
software/sim/src/cvs/include/: cvs.hpp
software/sim/src/cvs/src/: cvs.cpp
software/sim/src/ds/: CMakeLists.txt
software/sim/src/ds/include/: ds.hpp
software/sim/src/ds/src/: ds.cpp
software/sim/src/main/: CMakeLists.txt  main.cpp
software/sim/src/mock/: CMakeLists.txt
software/sim/src/mock/include/: mock_bus.hpp
software/sim/src/mock/src/: mock_bus.cpp
software/sim/src/os/: CMakeLists.txt
software/sim/src/os/include/: os.hpp
software/sim/src/os/src/: os.cpp
software/sim/src/ses/: CMakeLists.txt
software/sim/src/ses/include/: ses.hpp  ses_interface.hpp
software/sim/src/ses/interface/: ises.hpp
software/sim/src/ses/src/: ses.cpp
software/sim/src/sodf/: CMakeLists.txt
software/sim/src/sodf/include/: sodf.hpp
software/sim/src/sodf/interface/: isodf.hpp
software/sim/src/sodf/src/: ds.cpp
watcher/: watcher.py
