cmake_minimum_required(VERSION 3.10)
project(ArachnopodSim)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)

# set(CMAKE_VS_BUILD_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/_build)

add_subdirectory(src)